# warden-stock-quant

./: .gitignore  AGENTS.md  LICENSE  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_m1.py  0002_init_m2.py  0003_init_m3.py  0004_init_m4.py  0005_init_m4_optimization.py  0006_init_m6_m7_m10_share.py  0007_init_m8_m9.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/cli/: __init__.py  import_backup.py
backend/app/core/: __init__.py
backend/app/core/alerting/: __init__.py  dispatcher.py
backend/app/core/cache/: __init__.py  client.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/db/: __init__.py  base.py  session.py
backend/app/core/engine/: __init__.py
backend/app/core/errors/: __init__.py  codes.py  exceptions.py  handlers.py
backend/app/core/logging/: __init__.py  config.py  middleware.py
backend/app/core/response/: __init__.py  envelope.py
backend/app/core/security/: __init__.py  api_key.py  deps.py  encryption.py  jwt.py  password.py
backend/app/features/: __init__.py
backend/app/features/admin/: router.py
backend/app/features/alerts/: __init__.py  models.py  repository.py  router.py  schema.py  service.py
backend/app/features/auth/: __init__.py  router.py  schema.py  service.py
backend/app/features/backtests/: models.py  repository.py  router.py  schema.py  service.py
backend/app/features/datasets/: models.py  repository.py  router.py  schema.py  service.py
backend/app/features/factors/: __init__.py  models.py  repository.py  router.py  schema.py  service.py
backend/app/features/jobs/: router.py
backend/app/features/portfolios/: __init__.py  models.py  repository.py  (+3 more)
backend/app/tasks/: __init__.py  async_runner.py  backtest_tasks.py  celery_app.py  data_tasks.py  factor_tasks.py
backend/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  import-data.sh
backend/tests/: conftest.py  test_alerts.py  test_api_keys.py  test_auth.py  test_backtest_engine.py  test_backtest_optimizer.py  test_backtest_signals.py  test_backtests.py  test_datasets.py  test_factors.py  test_portfolios.py  test_report_analysis.py  test_reports.py  test_risk.py  test_strategies.py  test_strategy_validator.py  test_tenant.py  test_trading.py
(+181 files in other folders)
